// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo should render correctly showing 1`] = `
<div>
  <div
    class="repo"
  >
    <a
      href="https://github.com/iamgnlc"
      rel="noopener noreferrer"
      target="_blank"
    >
      https://github.com/iamgnlc
    </a>
  </div>
</div>
`;

exports[`Repo should render correctly without showing 1`] = `
<div>
  <div
    class="repo hide"
  />
</div>
`;
